cmake_minimum_required(VERSION 3.25)
project(thpoolcc VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE Release)

file(GLOB PERF_SOURCES "perf/*.cc" "perf/*.cpp")
foreach(src ${PERF_SOURCES})
  get_filename_component(target ${src} NAME_WE)
  add_executable(${target} ${src})
  target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endforeach()